[gd_scene load_steps=6 format=3 uid="uid://d4a3t8yuyh307"]

[ext_resource type="Script" uid="uid://bqolw5iehqdig" path="res://Scripts/Player/player.gd" id="1_v0iea"]
[ext_resource type="Script" uid="uid://0lrkciq870up" path="res://Scripts/Player/dialog.gd" id="2_6t5aa"]
[ext_resource type="Script" uid="uid://drsqq43yu2jb5" path="res://Scripts/Player/Interact.gd" id="2_cvnsp"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_v0iea"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_onrkg"]

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.18827522, 0)
collision_layer = 5
collision_mask = 5
script = ExtResource("1_v0iea")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.005018, 0)
mesh = SubResource("CapsuleMesh_v0iea")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.013994, 0)
shape = SubResource("CapsuleShape3D_onrkg")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75615287, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.87177587, 0)

[node name="UIControl" type="Control" parent="Head/Camera3D"]
layout_mode = 3
anchor_right = 0.19100001
anchor_bottom = 0.053000003
offset_right = -190.03201
offset_bottom = -15.344002

[node name="DialogBox" type="Control" parent="Head/Camera3D/UIControl"]
layout_mode = 1
anchor_right = 38.4
anchor_bottom = 34.158
offset_bottom = -0.0020141602
script = ExtResource("2_6t5aa")

[node name="Choice1" type="Button" parent="Head/Camera3D/UIControl/DialogBox"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.53300005
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 15.0
offset_right = -196.01605
offset_bottom = -14.0
text = "CHOIX 1"
autowrap_mode = 2

[node name="Choice2" type="Button" parent="Head/Camera3D/UIControl/DialogBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 154.0
offset_top = 15.0
offset_right = -13.0
offset_bottom = -14.0
text = "CHOIX 2"
autowrap_mode = 2

[node name="RayCast3D" type="RayCast3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 0.011222202, -0.99993706, 0, 0.99993706, 0.011222202, -5.7458878e-05, -1.1920929e-07, -0.5399309)
target_position = Vector3(0, -5, 0)
collision_mask = 2
debug_shape_custom_color = Color(1, 0, 0, 0.5058824)
debug_shape_thickness = 5
script = ExtResource("2_cvnsp")

[connection signal="visibility_changed" from="Head/Camera3D/UIControl/DialogBox" to="." method="_on_dialog_box_visibility_changed"]
[connection signal="pressed" from="Head/Camera3D/UIControl/DialogBox/Choice1" to="Head/Camera3D/UIControl/DialogBox" method="_on_choice_1_pressed"]
[connection signal="pressed" from="Head/Camera3D/UIControl/DialogBox/Choice2" to="Head/Camera3D/UIControl/DialogBox" method="_on_choice_2_pressed"]
